--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-combine-reducers": "^1.0.4",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "uid": "^2.0.0",
