--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-npx",
+  "name": "activity-select",
   "version": "0.1.0",
   "engines": {
-    "node": "14.x"
+    "node": "^16"
   },
   "private": true,
   "dependencies": {
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.16.1",
     "firebase": "^8.1.1",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-combine-reducers": "^1.0.4",
     "react-datepicker": "^3.3.0",
@@ -19,8 +18,12 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "sass": "^1.45.0",
     "uid": "^2.0.0",
     "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "sass-loader": "^12.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
