--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/playground
 
 # misc
 .DS_Store
@@ -22,4 +23,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .prettierrc
-/src/playground
